--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,9 @@ nebula_force_install: false
 # location of the nebula binaries
 nebula_bin_directory: /bin
 
+nebula_user: nebula
+nebula_group: nebula
+
 # this will cause net.ipv4.ip_forward to be set to 1 to allow unsafe routes
 enable_ip_forward: false
 
