--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -44,7 +44,7 @@
   ansible.builtin.file:
     path: "{{ nebula_bin_directory }}/nebula"
     owner: root
-    group: root
+    group: "{{ nebula_group }}"
     mode: '0750'
 
 - name: Set correct user and group on the nebula-cert binary
@@ -54,18 +54,36 @@
     group: root
     mode: '0750'
 
+- name: Create user group
+  group:
+    name: "{{ nebula_group }}"
+    system: yes
+    state: present
+
+- name: Create user
+  user:
+    name: "{{ nebula_user }}"
+    group: "{{ nebula_group }}"
+    shell: /sbin/nologin
+    create_home: no
+    system: yes
+    state: present
+  become: true
+
 - name: Create configuration directory
   file:
     path: /etc/nebula
     state: directory
-    mode: "0750"
+    owner: "{{ nebula_user }}"
+    group: "{{ nebula_group }}"
+    mode: "0700"
 
 - name: Deploy configuration template
   ansible.builtin.template:
     src: templates/config.yaml.j2
     dest: /etc/nebula/config.yaml
-    owner: root
-    group: root
+    owner: "{{ nebula_user }}"
+    group: "{{ nebula_group }}"
     mode: "0600"
   register: nebula_config
   notify:
